# sum18_ws

devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/gazros_test/: infrared_listener  line_follower  tf_broadcaster  tf_listener  timid_robot
devel/lib/pkgconfig/: gazros_test.pc  velodyne_tut.pc
devel/share/gazros_test/cmake/: gazros_testConfig.cmake
devel/share/velodyne_tut/cmake/: velodyne_tutConfig.cmake
src/gazros_test/: CMakeLists.txt  README.md  package.xml
src/gazros_test/action/: Flight.action
src/gazros_test/config/: diffdrive.yaml
src/gazros_test/include/: LineFollower.h  light_sensor_plugin.h
src/gazros_test/launch/: line_following.launch  main.launch  timid.launch  transform.launch
src/gazros_test/meshes/: diff_drive_base.dae  diff_drive_base.stl  diff_drive_base_old.dae  diff_drive_shelf.dae  wheel.dae
src/gazros_test/models/diff_drive_model/: diff_drive_base.dae  diff_drive_base.sdf  diff_drive_base.stl  diff_drive_model.config  diff_drive_model.urdf
src/gazros_test/src/: IRListener.cpp  LineFollower.cpp  LineFollower.h  Timid.cpp  Timid.h  light_sensor_plugin.cpp  tf_broadcaster.cpp  tf_listener.cpp
src/gazros_test/worlds/: follow_the_line.world  testlaunch.world
src/velodyne_tut/: CMakeLists.txt
src/velodyne_tut/worlds/: velodyne.world
